syntax="proto3";	//版本号
package xmsg;		//c++的命名空间
message XMsgHead{
	int32 msg_size = 1;
	string msg_str = 2;
	int32 msg_type = 3;

}
